crates/internal/brink-test-harness/tests/snapshots/debug_sessions__run_case@step_over_a_call.snap
---
source: crates/internal/brink-test-harness/tests/debug_sessions.rs
---
break story.ink:7
run -> breakpoint story.ink:7
  at story.ink:7
expect-line 7
stepi over -> step
  at story.ink:7
stepi over -> step
  at story.ink:7
stepi over -> step
  at story.ink:7
stepi over -> step
  at story.ink:8
expect-line 8
locals
  who = "vendor"
expect-local who = "vendor"
stack
  start
